--- a/CI/templates/steps_setup.yml
+++ b/CI/templates/steps_setup.yml
@@ -20,11 +20,13 @@ steps:
     echo "##vso[task.setvariable variable=buildbranch;]refs/heads/${{ parameters.build_branch }}"
 
     global_variables_pipeline
+    create_ssh_tunnel
     free_space_packages
     setup_yp_deps
     cleanup_leftover_deps
     setup_yp_deps
     create_local_dirs
+
   displayName: 'Setup container'
 
 - task: DownloadPipelineArtifact@2
@@ -50,7 +52,7 @@ steps:
 
 - bash: |
     source azp-scripts/azp-helpers.sh
-    RMWORK="0" localconf
+    BLEEDING=${{ parameters.bleeding }} RMWORK="0" localconf
     SELF="$(Build.SourcesDirectory)" add_layers
   continueOnError: false
   displayName: 'Create bitbake configuration'
