freertos-demo-pico: Add FreeRTOS example application for the Pico board
- Add the meta-freertos layer as a submodule.
- Leverage the meta-freertos layer to build freertos-demo-pico.
- Add CI code to build the FreeRTOS example as well.

The freertos-demo-pico recipe relies on the FreeRTOS kernel coming
from the meta-freertos layer and builds an application from
the repo:

https://github.com/ahcbb6/FreeRTOS-raspberrypi-pico

The sample application runs a periodic task every second, switching the
onboard LED state.

Signed-off-by: Alejandro Enedino Hernandez Samaniego <alejandro@enedino.org>

--- a/CI/templates/steps_build.yml
+++ b/CI/templates/steps_build.yml
@@ -1,16 +1,40 @@
 steps:
 - bash: |
-    echo "Building pico-examples for ${MACHINE}"
+    source azp-scripts/azp-helpers.sh
+    print_section "Building pico-examples for ${MACHINE}"
     cd ~/poky
     source oe-init-build-env
+
     echo "BUILDCFG_VARS:append = \" TCLIBC\"" >> ./conf/local.conf
     echo "MACHINE = \"${MACHINE}\"" >> ./conf/local.conf
     echo "TCLIBC = \"newlib\"" >> ./conf/local.conf
-    echo "Building with the following configuration:"
+
+    print_section "Building with the following configuration:"
     tail -n 10 conf/local.conf
-    bitbake pico-examples
+    if [ -z "${BBTARGET}" ]; then
+        export BBTARGET="pico-examples"
+    fi
+    print_section "Running cmd: bitbake ${BBTARGET}"
+    bitbake ${BBTARGET}
+
   condition: succeededOrFailed()
   displayName: 'Build baremetal images'
+
+- bash: |
+    source azp-scripts/azp-helpers.sh
+    print_section "Building FreeRTOS-example for ${MACHINE}"
+    cd ~/poky
+    source oe-init-build-env
+    print_section "Building with the following configuration:"
+    tail -n 10 conf/local.conf
+    if [ -z "${BBTARGET}" ]; then
+        export BBTARGET="freertos-demo-pico"
+    fi
+    print_section "Running cmd: bitbake ${BBTARGET}"
+    bitbake ${BBTARGET}
+
+  condition: succeededOrFailed()
+  displayName: 'Build FreeRTOS image'
 
 - bash: |
     source azp-scripts/azp-helpers.sh
