--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,6 +10,6 @@ BBFILE_PATTERN_meta-raspberrypi-baremetal = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-raspberrypi-baremetal = "6"
 
 LAYERDEPENDS_meta-raspberrypi-baremetal = "core"
-LAYERSERIES_COMPAT_meta-raspberrypi-baremetal = "mickledore"
+LAYERSERIES_COMPAT_meta-raspberrypi-baremetal = "nanbield"
 
 PICO_SDK_SRCREV ?= "6a7db34ff63345a7badec79ebea3aaef1712f374"
