meta-raspberrypi-baremetal: use nodistro instead of poky
The poky repo is no longer being maintained upstream, we never
really relied on it but it was simpler to use, now, instead
of using the poky repo, clone bitbake and openembedded separately
and build using nodistro

Signed-off-by: Alejandro Hernandez Samaniego <alejandro@enedino.org>

--- a/CI/templates/steps_build.yml
+++ b/CI/templates/steps_build.yml
@@ -2,8 +2,8 @@ steps:
 - bash: |
     source azp-scripts/azp-helpers.sh
     print_section "Building pico-examples for ${MACHINE}"
-    cd ~/poky
-    source oe-init-build-env
+    cd ~/
+    source openembedded-core/oe-init-build-env
 
     echo "BUILDCFG_VARS:append = \" TCLIBC\"" >> ./conf/local.conf
     echo "MACHINE = \"${MACHINE}\"" >> ./conf/local.conf
@@ -23,8 +23,8 @@ steps:
 - bash: |
     source azp-scripts/azp-helpers.sh
     print_section "Building FreeRTOS-example for ${MACHINE}"
-    cd ~/poky
-    source oe-init-build-env
+    cd ~/
+    source openembedded-core/oe-init-build-env
     print_section "Building with the following configuration:"
     tail -n 10 conf/local.conf
     if [ -z "${BBTARGET}" ]; then
