--- a/conf/machine/raspberrypi-pico.conf
+++ b/conf/machine/raspberrypi-pico.conf
@@ -8,3 +8,11 @@ RASPI_BOARD ?= "pico"
 
 # This should only be built using tclibc-newlib
 TCLIBC ?= "newlib"
+
+# We used to get these from DISTRO=poky, include them since we no longer
+# build using poky
+require conf/distro/include/security_flags.inc
+
+# Removed from bitbake.conf in 1797741aad02b8bf429fac4b81e30cdda64b5448
+# We need this so --sysroot= is passed correctly to CMAKE_C_LINK_FLAGS
+TARGET_LDFLAGS:append:class-target = " ${DEBUG_PREFIX_MAP}"
