--- a/CI/templates/steps_setup.yml
+++ b/CI/templates/steps_setup.yml
@@ -43,8 +43,12 @@ steps:
 
 - bash: |
     source azp-scripts/azp-helpers.sh
-    # GITHUB=1 BRANCH=test-branch clone_layers poky
-    SELF=$(Build.SourcesDirectory) GITHUB=0 BRANCH=${{ parameters.build_branch }} clone_layers poky
+    # To build from github, set pipeline variables GITHUB=1 and BRANCH=foo
+    # BRANCH=foo needs to exist in both oe-core and bitbake forks
+    if [ -z ${BRANCH} ]; then
+        export BRANCH="${{ parameters.build_branch }}"
+    fi
+    SELF=$(Build.SourcesDirectory) clone_layers poky
   continueOnError: false
   displayName: 'Clone Repositories'
 
